# todo_fastAPI

./: README.MD  main.py  manage.py  pyproject.toml
core/: settings.py
